Fully implemented logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h1>Happy coding</h1>
+<main class="main">
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+
+  <div class="footer">
+    Designed and developed by ITeam ♥
+  </div>
+</main>
