--- a/src/app/components/question-create/question-create.component.html
+++ b/src/app/components/question-create/question-create.component.html
@@ -23,17 +23,17 @@
       <mat-radio-button class="radio-button" value="Open">Open</mat-radio-button>
     </mat-radio-group>
 
-    <div *ngIf="createQuestionForm.controls['typeOfQuestion'].value === 'Single'" class="container-single-choice">
-      <div *ngFor="let option of listOfOptions.controls; let idx=index"
+    <div *ngIf="isSingle" class="container-single-choice">
+      <div *ngFor="let option of listOfOptions.controls; let index=index"
            formArrayName="listOfOptions">
-        <mat-form-field *ngIf="option.value.isRight" appearance="fill" [formGroupName]="idx">
+        <mat-form-field *ngIf="option.value.isRight" appearance="fill" [formGroupName]="index">
           <mat-label>Correct option</mat-label>
           <input matInput formControlName="option">
         </mat-form-field>
 
         <div *ngIf="!option.value.isRight"
              class="option-input">
-          <mat-form-field appearance="fill" [formGroupName]="idx">
+          <mat-form-field appearance="fill" [formGroupName]="index">
             <mat-label>Wrong option</mat-label>
             <input matInput formControlName="option">
           </mat-form-field>
@@ -41,20 +41,20 @@
             mat-raised-button
             class="remove-button"
             *ngIf="amountOfWrongOptions > 1"
-            (click)="removeOption(idx)"
+            (click)="removeOption(index)"
           >Remove</button>
         </div>
       </div>
     </div>
 
-    <div class="container-multiple-choice" *ngIf="createQuestionForm.controls['typeOfQuestion'].value === 'Multiple'">
+    <div class="container-multiple-choice" *ngIf="isMultiple">
       <div
-        *ngFor="let option of listOfOptions.controls; let idx=index"
+        *ngFor="let option of listOfOptions.controls; let i=index"
         class="option-input"
         formArrayName="listOfOptions"
       >
         <div *ngIf="option.value.isRight" class="option-input">
-          <mat-form-field appearance="fill" [formGroupName]="idx">
+          <mat-form-field appearance="fill" [formGroupName]="i">
             <mat-label>Correct option</mat-label>
             <input matInput formControlName="option">
           </mat-form-field>
@@ -62,7 +62,7 @@
             mat-raised-button
             class="remove-button"
             *ngIf="amountOfCorrectOptions > 1"
-            (click)="removeOption(idx)"
+            (click)="removeOption(i)"
           >Remove</button>
         </div>
 
@@ -70,7 +70,7 @@
           *ngIf="!option.value.isRight"
           class="option-input"
         >
-          <mat-form-field appearance="fill" [formGroupName]="idx">
+          <mat-form-field appearance="fill" [formGroupName]="i">
             <mat-label>Wrong option</mat-label>
             <input matInput formControlName="option">
           </mat-form-field>
@@ -78,14 +78,13 @@
             mat-raised-button
             class="remove-button"
             *ngIf="amountOfWrongOptions > 1"
-            (click)="removeOption(idx)"
+            (click)="removeOption(i)"
           >Remove</button>
         </div>
       </div>
-
     </div>
 
-    <div class="container-open-choice" *ngIf="createQuestionForm.controls['typeOfQuestion'].value === 'Open'" formArrayName="listOfOptions">
+    <div class="container-open-choice" *ngIf="isOpen" formArrayName="listOfOptions">
       <div *ngFor="let option of listOfOptions.controls; let idx=index">
         <mat-form-field [formGroupName]="idx" appearance="fill">
           <mat-label>Correct option</mat-label>
@@ -99,15 +98,14 @@
         mat-raised-button
         class="add-button"
         (click)="addOption('correct')"
-        *ngIf="createQuestionForm.controls['typeOfQuestion'].value !== 'Single'
-      && createQuestionForm.controls['typeOfQuestion'].value !== 'Open'"
+        *ngIf="!isSingle && !isOpen"
       >Add correct option</button>
 
       <button
         mat-raised-button
         class="add-button"
         (click)="addOption('wrong')"
-        *ngIf="createQuestionForm.controls['typeOfQuestion'].value !== 'Open'"
+        *ngIf="!isOpen"
       >Add wrong option</button>
     </div>
   </form>
