--- a/src/app/components/question-edit/question-edit.component.html
+++ b/src/app/components/question-edit/question-edit.component.html
@@ -23,7 +23,7 @@
       <mat-radio-button class="radio-button" value="Open">Open</mat-radio-button>
     </mat-radio-group>
 
-    <div *ngIf="createQuestionForm.controls['typeOfQuestion'].value === 'Single'" class="container-single-choice">
+    <div *ngIf="isSingle" class="container-single-choice">
       <div *ngFor="let option of listOfOptions.controls; let idx=index" formArrayName="options">
         <mat-form-field *ngIf="option.value.isRight" appearance="fill" [formGroupName]="idx">
           <mat-label>Correct option</mat-label>
@@ -49,7 +49,7 @@
 
     </div>
 
-    <div class="container-multiple-choice" *ngIf="createQuestionForm.controls['typeOfQuestion'].value === 'Multiple'">
+    <div class="container-multiple-choice" *ngIf="isMultiple">
       <div
         *ngFor="let option of listOfOptions.controls; let idx=index"
         class="option-input"
@@ -93,7 +93,7 @@
 
     <div
       class="container-open-choice"
-      *ngIf="createQuestionForm.controls['typeOfQuestion'].value === 'Open'"
+      *ngIf="isOpen"
       formArrayName="options"
     >
       <div *ngFor="let option of listOfOptions.controls; let idx=index">
@@ -108,15 +108,14 @@
       mat-raised-button
       class="add-button"
       (click)="addOption('correct')"
-      *ngIf="createQuestionForm.controls['typeOfQuestion'].value !== 'Single'
-      && createQuestionForm.controls['typeOfQuestion'].value !== 'Open'"
+      *ngIf="!isSingle && !isOpen"
     >Add correct option</button>
 
     <button
       mat-raised-button
       class="add-button"
       (click)="addOption('wrong')"
-      *ngIf="createQuestionForm.controls['typeOfQuestion'].value !== 'Open'"
+      *ngIf="!isOpen"
     >Add wrong option</button>
   </form>
 
